Added CSS style to header

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <div class="header">
-        <p>Header Logo</p>
+        <p id="logo">Header Logo</p>
         <p>header link one</p>
         <p>header link two</p>
         <p>header link three</p>
