--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
         <p>header link three</p>
     </div>
 
-    <div class="title">
-        <h1>This website is awesome</h1>
-        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower
-            contrast</p>
-        <button>Sign up</button>
-        <p>this is a placeholder for an image</p>
+    <div class="title-section">
+        <div class="left-side">
+            <h1 class="main-text">This website is awesome</h1>
+            <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller
+                font and the color is lower
+                contrast</p>
+            <button>Sign up</button>
+        </div>
+        <div class="right-side">
+            <p class="title-image-text">this is a placeholder for an image</p>
+        </div>
     </div>
 
     <div>
