Added CSS styles to dog section

--- a/index.html
+++ b/index.html
@@ -31,16 +31,26 @@
         </div>
     </div>
 
-    <div>
-        <h2>Some random information.</h2>
-        <img src="dog1.webp" alt="Doggy">
-        <h4>Dog 1</h4>
-        <img src="dog2.jpg" alt="Doggy">
-        <h4>Dog 2</h4>
-        <img src="dog3.jpg" alt="Doggy">
-        <h4>Dog 3</h4>
-        <img src="dog4.webp" alt="Doggy">
-        <h4>Dog 4</h4>
+    <div class="dog-section">
+        <h2 class="information-header">Some random pictures of dogs.</h2>
+        <div class="dog-pictures">
+            <div class="dog-1">
+                <img src="dog1.webp" alt="Doggy">
+                <h4>Dog 1</h4>
+            </div>
+            <div class="dog-2">
+                <img src="dog2.jpg" alt="Doggy">
+                <h4>Dog 2</h4>
+            </div>
+            <div class="dog-3">
+                <img src="dog3.jpg" alt="Doggy">
+                <h4>Dog 3</h4>
+            </div>
+            <div class="dog-4">
+                <img src="dog4.webp" alt="Doggy">
+                <h4>Dog 4</h4>
+            </div>
+        </div>
     </div>
 
     <div>
