Added CSS styles to button section

--- a/index.html
+++ b/index.html
@@ -54,15 +54,18 @@
     </div>
 
     <div class="quote-section">
-        <p class="quote">This is an insiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe
+        <p class="quote">This is an insiring quote, or a testimonial from a customer. Maybe it's just filling up space,
+            or maybe
             people will actually read it. Who knows? All I know is that it looks nice.</p>
         <p class="thor">-Thor, God of Thunder</p>
     </div>
 
-    <div>
-        <p>Call to action! It's time!</p>
-        <p>Sign up for our product by clicking that button right over there!</p>
-        <button>Sign up</button>
+    <div class="button-section">
+        <div class="button-section-text">
+            <p class="call-to-action">Call to action! It's time!</p>
+            <p class="sign-up-text">Sign up for our product by clicking that button right over there!</p>
+        </div>
+        <button class="bottom-button">Sign up</button>
     </div>
 
     <div>
