Added CSS styles to copyright section

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <button class="bottom-button">Sign up</button>
     </div>
 
-    <div>
+    <div class="copyright-section">
         <p>Copyright © The Odin Project 2021</p>
     </div>
 
